# repo_cpp

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  calendaractivity.cpp  calendaractivity.h  calendaractivity.ui  db_path.db  design.qrc  fit_application.pro  mainwindow.cpp  schedule.cpp  schedule.h  schedule.ui  sets.cpp  sets.h  ui_calendaractivity.h  ui_mainwindow.h  ui_schedule.h  ui_sets.h
.qtc_clangd/: compile_commands.json
debug/: object_script.fit_application.Debug
design/: DarkStyle.qss
for_doka/: calendaractivity.cpp  calendaractivity.h  main.cpp  mainwindow.h  mainwindow.ui  schedule.cpp  schedule.h  sets.h  sets.ui
html/: annotated.html  calendaractivity_8h.html  calendaractivity_8h_source.html  class_calendar_activity-members.html  class_calendar_activity.html  class_check_box_delegate-members.html  class_check_box_delegate.html  class_main_window-members.html  class_main_window.html  class_schedule-members.html  class_schedule.html  class_sets-members.html  class_sets.html  class_ui_1_1_calendar_activity-members.html  class_ui_1_1_calendar_activity.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui_1_1schedule-members.html  class_ui_1_1schedule.html  class_ui_1_1sets-members.html  class_ui_1_1sets.html  class_ui___calendar_activity-members.html  class_ui___calendar_activity.html  class_ui___main_window-members.html  class_ui___main_window.html  class_ui__schedule-members.html  class_ui__schedule.html  class_ui__sets-members.html  class_ui__sets.html  class_validating_combo_box_delegate-members.html  class_validating_combo_box_delegate.html  classes.html  classschedule-members.html  classschedule.html  classsets-members.html  classsets.html  files.html  functions.html  functions_func.html  hierarchy.html  (+10 more)
latex/: annotated.tex  calendaractivity_8h_source.tex  class_calendar_activity.eps  class_calendar_activity.tex  class_sets.eps  (+36 more)
(+116 files in other folders)
